--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 					//alert(path);
 					img.src = path.toString();
 					document.getElementById("imgcontainer").appendChild(img);
-					console.log('lol');
+					
 				}
-				
+				path = path.concat('pg1'/6.toString(),'.gif');
+				img.src=path.toString();
+				document.getElementByID("imgcontainer").appendChild(img);
 
 				</script>
 
