--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					document.getElementById("imgcontainer").appendChild(img);
 					
 				}
-				path = path.concat('pg1'/6.toString(),'.gif');
+				path = path.concat('pg1/',6,'.gif');
 				img.src=path.toString();
 				document.getElementByID("imgcontainer").appendChild(img);
 
