--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 				for (var i = 1; i<=num_imgs; i++) {
 					var img = new Image();
 					var path = "";
-					path = path.concat('pg1/',i.toString(),'.png');
+					var filetype = '.png';
+					if(i==6){
+						filetype='.gif';
+					}
+					path = path.concat('pg1/',i.toString(),filetype);
 					//alert(path);
 					img.src = path.toString();
 					document.getElementById("imgcontainer").appendChild(img);
@@ -39,7 +43,7 @@
 				}
 				path = path.concat('pg1/',6,'.gif');
 				img.src=path.toString();
-				document.getElementByID("imgcontainer").appendChild(img);
+				document.getElementById("imgcontainer").appendChild(img);
 
 				</script>
 
