--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width"> <!--took out ", initial-scale=1.0"-->
 		<title>In Real Life</title>
 		<link rel="stylesheet" href="IRLstyles.css">
 	</head>
@@ -34,6 +34,7 @@
 					var filetype = '.png';
 					if(i==6){
 						filetype='.gif';
+						
 					}
 					path = path.concat('pg1/',i.toString(),filetype);
 					//alert(path);
