--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 					var img = new Image();
 					var path = "";
 					var filetype = '.png';
-					if(i==6){
-						filetype='.gif';
+					// if(i==6){
+					// 	filetype='.gif';
 						
-					}
+					// }
 					path = path.concat('pg1/',i.toString(),filetype);
 					//alert(path);
 					img.src = path.toString();
 					document.getElementById("imgcontainer").appendChild(img);
 					
 				}
-				path = path.concat('pg1/',6,'.gif');
-				img.src=path.toString();
-				document.getElementById("imgcontainer").appendChild(img);
+				// path = path.concat('pg1/',6,'.gif');
+				// img.src=path.toString();
+				// document.getElementById("imgcontainer").appendChild(img);
 
 				</script>
 
