making last page presentable.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width"> <!--took out ", initial-scale=1.0"-->
-		<title>In Real Life</title>
+		<title>(h)ours</title>
 		<link rel="stylesheet" href="IRLstyles.css">
 	</head>
 	<body>
 		<div id="container">
-		
-			<header>
-			header
-				<h1>In Real Life</a></h1>
-			</header>
-
-			<nav>
-			nav
-				<ul>
-					<li id="active"><a href="#">Portfolio</a></li>
-					<li><a href = "#">About</a></li>
-				</ul>
-			</nav> <!--eventually make a hamburger side bar thing to return to the top-->
-
-			<!--<img src="pg1/01intro.png" alt="01intro">-->
-
 			<div id="imgcontainer">
 				imgcontainer
 				<script>
-				var num_imgs = 11;
+				var num_imgs = 10;
 				for (var i = 1; i<=num_imgs; i++) {
 					var img = new Image();
 					var path = "";
@@ -50,11 +34,6 @@
 
 			</div>
 
-			<footer>
-				Danny Diaz-Etchevehere
-			</footer>
 		</div><!--container-->
 	</body>
-
-	<!--make xml sitemap, gooanalytics-->
 </html>
